<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>quick_build</name>
    <version>0.0.0</version>
    <description>quick_build</description>
    <maintainer email="team@qutmotorsport.com">Alastair Bradford</maintainer>
    <license>MIT</license>
    
    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>fs_nav2</exec_depend>
    <exec_depend>sam_bot_description</exec_depend>
    <exec_depend>eufs_rviz_plugins</exec_depend>
    <exec_depend>eufs_plugins</exec_depend>
    <exec_depend>eufs_models</exec_depend>
    <exec_depend>eufs_msgs</exec_depend>
    <exec_depend>eufs_launcher</exec_depend>
    <exec_depend>eufs_racecar</exec_depend>
    <exec_depend>eufs_rqt</exec_depend>
    <exec_depend>eufs_tracks</exec_depend>
    <exec_depend>eufs_launcher</exec_depend>
    <exec_depend>driverless_msgs</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
